Ensemble #99: Refactored to remove the List<Bet> and push the "Bet" into "Player".